objects/CMPL123QMS__Failure_Mode_Effect__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123QMS__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Detectability__c</fullName>
        <label>Detectability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__FMEA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup filed to the FMEA object</description>
        <label>FMEA</label>
        <referenceTo>CMPL123QMS__FMEA__c</referenceTo>
        <relationshipLabel>Failure Mode Effects</relationshipLabel>
        <relationshipName>Failure_Mode_Effects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__FM_Description__c</fullName>
        <description>A Cross-Object formula field to display the Failure Mode Short Description field.</description>
        <formula>IF(ISBLANK(CMPL123QMS__Failure_Mode__r.CMPL123QMS__Short_Description__c),"n/a",CMPL123QMS__Failure_Mode__r.CMPL123QMS__Short_Description__c)</formula>
        <label>FM Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Failure_Mode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Failure Mode</label>
        <referenceTo>CMPL123QMS__Failure_Mode__c</referenceTo>
        <relationshipLabel>Failure Mode Effects</relationshipLabel>
        <relationshipName>Failure_Mode_Effects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Justification__c</fullName>
        <label>Justification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Occurrence__c</fullName>
        <label>Occurrence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Risk_Score__c</fullName>
        <formula>CMPL123QMS__Severity__c  *  CMPL123QMS__Occurrence__c  *  CMPL123QMS__Detectability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Severity__c</fullName>
        <label>Severity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Short_Description__c</fullName>
        <label>Short Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Failure Mode Effect</label>
    <listViews>
        <fullName>CMPL123QMS__All_Failure_Mode_Effect</fullName>
        <columns>NAME</columns>
        <columns>CMPL123QMS__Short_Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>FME-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Failure Mode Effects</pluralLabel>
    <recordTypes>
        <fullName>CMPL123QMS__Failure_Mode_Effect</fullName>
        <active>true</active>
        <label>Failure Mode Effect</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>